# fitmodel

./: CMakeLists.txt  in.lj  log.lammps  main.cpp  main_mpi.cpp  main_pso.cpp  try.yaml
src/: lammps_model.cpp  lammps_model.hpp  model.hpp  para_fitness.cpp  para_fitness.hpp  parameters_node.cpp  parameters_node.hpp  yaml-vector.hpp
test/sw/: fdfd.sw  sw.yaml
test/sw/ins/: in_copy.sw  log.lammps
tools/: vasprunbuild.py
